--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.11.0",
     "ajv-keywords": "^5.1.0",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
